src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ATWC_2012__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATWC 2012</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_LY__c</fullName>
        <description>Sales LY on Accounts owned by the rep. Used in Italy to group reps into categories by size. Updated manually. If more countries would use this field, update this description accordingly</description>
        <inlineHelpText>Sales LY on Accounts owned by the rep. Used in Italy to group reps into categories by size. Updated manually.</inlineHelpText>
        <label>Actual Sales LY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Manager_DI_DE__c</fullName>
        <description>Shows the Area Manager of a certain Sales Rep. Used in Approval rules etc</description>
        <inlineHelpText>Shows the Area Manager of a certain Sales Rep. Used in Approval rules etc</inlineHelpText>
        <label>Area Manager DI (DE)</label>
        <relationshipName>Sales_Reps</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <formula>CASE(Product_Area__c, &quot;Dental&quot;, &quot;Dentsply Implants&quot;,  &quot;Urology&quot;, &quot;Wellspect&quot;, &quot;Surgery&quot;, &quot;Wellspect&quot;, &quot;Healthcare&quot;, &quot;Wellspect&quot;, &quot;All&quot;, &quot;Dentsply IH&quot;,
&quot;None&quot;)</formula>
        <label>Business Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMAdminActions__c</fullName>
        <description>Hyperlink to redirect to a screen flow to allow admins to unfreeze a user.</description>
        <formula>HYPERLINK(&quot;/flow/Users_Unfreeze_User?UserRecordId=&quot;+Id+&quot;&amp;returl=/&quot;+Id, &quot;Unfreeze this user&quot;, &quot;_self&quot;)</formula>
        <label>CRM Admin Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Internal_Team_Comments__c</fullName>
        <label>CRM Internal Team Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_team_comments__c</fullName>
        <label>CRM team comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CY_Implant_ASP__c</fullName>
        <label>CY Implant ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ComputerId__c</fullName>
        <description>DO NOT DELETE - Used for Encore Integration</description>
        <label>Computer Login Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_3_digit__c</fullName>
        <description>3-digit country code. Used mainly for Wave reporting where it is needed in Wave maps for the map to understand which country we are referring to. Dependent on user country so the three digit code will be automatically entered based on User Country - NOTE: when adding a new User Country you must state which 3 digit code belongs to that country for it to work.</description>
        <label>Country Code (3-digit)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Country_Code_3_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Activity_Length_In_Minutes__c</fullName>
        <description>The number of minutes that an activity or task duration should default to.</description>
        <inlineHelpText>Used to calculate the default End Time of a task. You are still able to create tasks that last longer or shorter than this value. For example, a value of 60 will default the End Time of a task to 60 minutes after the Start Time</inlineHelpText>
        <label>Default Activity Length In Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_CFE_SBUs__c</fullName>
        <inlineHelpText>The SBUs that will be selected by default when creating a CFE</inlineHelpText>
        <label>Default CFE SBUs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBU_Full_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Event_Subject__c</fullName>
        <defaultValue>&quot;{||EventType||}{ - ||WhoName||}{ - ||RelatedToName||}&quot;</defaultValue>
        <label>Default Event Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Event_Update_Calendar__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Default Event Update Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Region_D_UK__c</fullName>
        <description>Used by UK to define what Digital Region a Clinical TSM belongs to.</description>
        <inlineHelpText>Used by UK to define what Digital Region a Clinical TSM belongs to.</inlineHelpText>
        <label>Digital Region (UK)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Digital R1</fullName>
                </value>
                <value>
                    <fullName>Digital R2</fullName>
                </value>
                <value>
                    <fullName>Digital R3</fullName>
                </value>
                <value>
                    <fullName>Digital R4</fullName>
                </value>
                <value>
                    <fullName>Digital R5</fullName>
                </value>
                <value>
                    <fullName>Digital R6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>---------------------Spain---------------------</fullName>
                </value>
                <value>
                    <fullName>Alicante</fullName>
                </value>
                <value>
                    <fullName>Asturias</fullName>
                </value>
                <value>
                    <fullName>Baleares</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Córdoba</fullName>
                </value>
                <value>
                    <fullName>Granada</fullName>
                </value>
                <value>
                    <fullName>Guipúzcoa</fullName>
                </value>
                <value>
                    <fullName>La Coruña</fullName>
                </value>
                <value>
                    <fullName>Las Palmas</fullName>
                </value>
                <value>
                    <fullName>Lisboa</fullName>
                </value>
                <value>
                    <fullName>Madrid</fullName>
                </value>
                <value>
                    <fullName>Málaga</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>Oporto</fullName>
                </value>
                <value>
                    <fullName>Pontevedra</fullName>
                </value>
                <value>
                    <fullName>Sevilla</fullName>
                </value>
                <value>
                    <fullName>Valencia</fullName>
                </value>
                <value>
                    <fullName>Valladolid</fullName>
                </value>
                <value>
                    <fullName>Vizcaya</fullName>
                </value>
                <value>
                    <fullName>Zaragoza</fullName>
                </value>
                <value>
                    <fullName>-----------------------UK------------------------</fullName>
                </value>
                <value>
                    <fullName>ABERYSTWYTH</fullName>
                </value>
                <value>
                    <fullName>ASHFORD</fullName>
                </value>
                <value>
                    <fullName>AYLESBURY</fullName>
                </value>
                <value>
                    <fullName>AYR</fullName>
                </value>
                <value>
                    <fullName>BALLYMENA</fullName>
                </value>
                <value>
                    <fullName>BARNSLEY</fullName>
                </value>
                <value>
                    <fullName>BARNSTAPLE</fullName>
                </value>
                <value>
                    <fullName>BARROW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotFreeze__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by an Apex Batch that will freeze users that didn&apos;t login for a certain amount of time. The apex batch does not include the users flagged as &quot;do not freeze&quot;</description>
        <label>Do Not Freeze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DpgUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request from TFUS-2415</description>
        <label>DPG User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAO_2010__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if user is attending EAO 2010 and if so qualified to be given information about the event in Content.</description>
        <inlineHelpText>Used to determine if user is attending EAO 2010 and if so qualified to be given information about the event in Content.</inlineHelpText>
        <label>EAO 2010</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAO_2011__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if user is attending EAO 2011 and if so qualified to be given information about the event in Content.</description>
        <inlineHelpText>Used to determine if user is attending EAO 2011 and if so qualified to be given information about the event in Content.</inlineHelpText>
        <label>EAO 2011</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Sales_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the user to edit Sales Leads. If set to True, the User will be excluded from the Sales Lead Validation Rule.</description>
        <label>Edit Sales Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_report_package__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UserToReportPackageVF?id=&apos; &amp; Id, &apos;Edit report package&apos;, &apos;self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit report package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endodontics_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use User&apos;s SBUs instead</description>
        <label>TBD Endodontics User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_login_history_report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for reporting on users login history for admin purposes.</description>
        <label>Exclude from login history report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_FSL_Resource_Type__c</fullName>
        <description>A Field Service Starter Kit package field: 
When an admin creates or updates user records, the SFS Resource Type field on the user object allows the admin to assign permission sets to the user and determine whether a Service Resource record should be created and associated to the user as well.</description>
        <inlineHelpText>A Field Service Starter Kit package field: 
When an admin creates or updates user records, the SFS Resource Type field on the user object allows the admin to assign permission sets to the user and determine whether a Service Resource record should be created and associated to the user as well.</inlineHelpText>
        <label>SFS Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resource_Mobile</fullName>
                    <label>Resource (With Mobile)</label>
                </value>
                <value>
                    <fullName>Resource</fullName>
                    <label>Resource (Without Mobile)</label>
                </value>
                <value>
                    <fullName>Dispatcher</fullName>
                </value>
                <value>
                    <fullName>Resource_Dispatcher_Mobile</fullName>
                    <label>Resource &amp; Dispatcher (With Mobile)</label>
                </value>
                <value>
                    <fullName>Resource_Dispatcher</fullName>
                    <label>Resource &amp; Dispatcher (Without Mobile)</label>
                </value>
                <value>
                    <fullName>Community</fullName>
                    <label>Contractor Dispatcher (Community Dispatcher)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldSalesRatioPerc__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Describes if the user should be counted as a full-time sales rep(100%) or not. 
Example 1: If a rep is only working as a sales rep for 50% of the time and has other dutys or is only working part time, add 50% in this field. 
Example 2. If a manager is also workin 25% with field sales (equivalent as a sales rep) add 25% in this field.

Note that Administration time should not be deducted from this field</description>
        <inlineHelpText>Describes if the user should be counted as a full-time sales rep (100%) or a part-time sales rep (for example 50%).

Note that administrative time should not be deducted.</inlineHelpText>
        <label>Field Sales Ratio (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName&amp;&quot; &quot;&amp;LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product_Platform_GPP__c</fullName>
        <label>Global Product Platform (IMPL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implant System</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Volume_Quota_CY__c</fullName>
        <description>Field used for setting quota in Implants. Initially only for JP.</description>
        <label>Implant Volume Quota CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implants_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use User&apos;s SBUs instead</description>
        <label>Implants User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <description>Standard fields are not available for Account Reports, only Custom Owner fields are included</description>
        <formula>IF ( IsActive=True,True,False)</formula>
        <inlineHelpText>Standard fields are not available for Account Reports, only Custom Owner fields are included</inlineHelpText>
        <label>Active User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Country_HQ__c</fullName>
        <formula>IF(TEXT(User_Country__c) =  TEXT($User.User_Country__c) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Country? (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_My_Market__c</fullName>
        <description>Checks if the users market is the same as the logged in users market. If so marked as True, else False. Is used to get around that there are no &quot;My users&quot; option available in views</description>
        <formula>IF( TEXT($User.Market__c) =  TEXT(Market__c)  , TRUE, FALSE)</formula>
        <inlineHelpText>Checks if the users market is the same as the logged in users market. If so marked as True, else False. Is used to get around that there are no &quot;My users&quot; option available in views</inlineHelpText>
        <label>Is My Market?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LY_Implant_ASP__c</fullName>
        <label>LY Implant ASP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager_s_Manager__c</fullName>
        <description>The manager&apos;s manager, used to get the next approver after the manager</description>
        <formula>CASESAFEID(Manager.ManagerId)</formula>
        <label>Manager&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_workaround__c</fullName>
        <description>Workaround used to select users Manager</description>
        <inlineHelpText>&lt;!&gt; The value of this field overrides the std field &quot;Manager&quot;</inlineHelpText>
        <label>Manager selection</label>
        <relationshipName>ManagerWorkaround</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>&lt;ADMINISTRATION&gt; Keep the values of this field aligned with the Price Book Market field values.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>BeNelux</fullName>
                </value>
                <value>
                    <fullName>BEX</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>CEE</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>DEX</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>Iberia</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to enabled reporting on activities to see whether or not the user is set up for Mobile</description>
        <label>Mobile User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Movex_Uer_ID__c</fullName>
        <label>ERP User ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>My_Direct_Report__c</fullName>
        <formula>ManagerId=$User.Id
||
Id=$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Direct Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Peers_Same_Manager__c</fullName>
        <description>Checked for all users who has the same Manager as the logged in user. Dynamic formula based on logged in user. For sharing of calendars etc. If the logged in user is that manager the  result is also true</description>
        <formula>IF(ISBLANK($User.ManagerId), FALSE, IF(
(Manager.Id=$User.ManagerId
||
Id=$User.ManagerId), TRUE,FALSE))</formula>
        <label>My Peers (Same Manager)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Area__c</fullName>
        <formula>CASE
(Region__c , 
&quot;Central&quot;, &quot;Central&quot;, 
&quot;Florida&quot;, &quot;East&quot;, 
&quot;Great Lakes&quot;, &quot;Central&quot;, 
&quot;Gulf Coast&quot;, &quot;Central&quot;, 
&quot;Mid-Atlantic&quot;, &quot;East&quot;, 
&quot;MidWest&quot;, &quot;Central&quot;, 
&quot;New England&quot;, &quot;East&quot;, 
&quot;New York&quot;, &quot;East&quot;, 
&quot;Northern California&quot;, &quot;West&quot;, 
&quot;Texhoma&quot;, &quot;Central&quot;, 
&quot;Northwest&quot;, &quot;West&quot;, 
&quot;Rocky Mountains&quot;, &quot;West&quot;, 
&quot;Southern&quot;, &quot;East&quot;, 
&quot;Southeast&quot; , &quot;East&quot;, 
&quot;Southern California&quot; , &quot;West&quot;, 
&quot;Southwest&quot; , &quot;West&quot;, 
&quot;EAST CA&quot;, &quot;Canada&quot;, 
&quot;WEST CA&quot;,&quot;Canada&quot;, 
&quot;CENTRAL CA&quot;, &quot;Canada&quot;,
&quot;SIMPLANT&quot;, &quot;zSIMPLANT Team&quot;,
&quot;US Clinical Director Central&quot;, &quot;Central&quot;,
&quot;US Clinical Director East&quot;, &quot;East&quot;,
&quot;US Clinical Director West&quot;, &quot;West&quot;,
&quot;Central DIS&quot;, &quot;Central&quot;,
&quot;East DIS&quot;, &quot;East&quot;,
&quot;West DIS&quot;,&quot;West&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA: Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Clinical_Area__c</fullName>
        <formula>CASE(Region__c , 
&quot;Central&quot;, &quot;Central&quot;, 
&quot;Florida&quot;, &quot;East&quot;, 
&quot;Great Lakes&quot;, &quot;Central&quot;, 
&quot;Gulf Coast&quot;, &quot;Cenrtal&quot;, 
&quot;Mid-Atlantic&quot;, &quot;East&quot;, 
&quot;MidWest&quot;, &quot;Central&quot;, 
&quot;New England&quot;, &quot;East&quot;, 
&quot;New York&quot;, &quot;East&quot;, 
&quot;Northern California&quot;, &quot;West&quot;, 
&quot;Texhoma&quot;, &quot;Central&quot;, 
&quot;Northwest&quot;, &quot;West&quot;, 
&quot;Rocky Mountains&quot;, &quot;West&quot;, 
&quot;Southern&quot;, &quot;East&quot;, 
&quot;Southeast&quot; , &quot;East&quot;, 
&quot;Southern California&quot; , &quot;West&quot;, 
&quot;Southwest&quot; , &quot;West&quot;, 
&quot;EAST CA&quot;, &quot;Canada - East&quot;,
&quot;WEST CA&quot;,&quot;Canada - West&quot;,
&quot;CENTRAL CA&quot;, &quot;Canada - Central&quot;,
&quot;US Clinical Director Central&quot;, &quot;Central&quot;,
&quot;US Clinical Director East&quot;,&quot;East&quot;,
&quot;US Clinical Director West&quot;, &quot;West&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA Clinical Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Inside_Account_Manager__c</fullName>
        <label>NA: Inside Account Manager</label>
        <relationshipName>NA_IAM</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>NA_Lab_Channel_DM_Role__c</fullName>
        <formula>NA_Lab_Channel_DM__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA Lab Channel DM Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Lab_Channel_DM__c</fullName>
        <inlineHelpText>The Lab Channel District Manager, covering the District</inlineHelpText>
        <label>NA Lab Channel DM</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.ProfileId</field>
                <operation>equals</operation>
                <value>Laboratory Channel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <relationshipName>Clinical_to_Lab_Relation</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>NA_Profile_Team_Assigned__c</fullName>
        <label>NA: Profile Team Assigned</label>
        <relationshipName>ProfileTeam</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>NA_Regen_Area__c</fullName>
        <formula>CASE(Region__c ,
&quot;Central&quot;, &quot;Mountain&quot;,
&quot;Florida&quot;, &quot;Mid Central&quot;,
&quot;Great Lakes&quot;, &quot;Mid Central&quot;,
&quot;Gulf Coast&quot;, &quot;Mountain&quot;,
&quot;Mid-Atlantic&quot;, &quot;East Coast&quot;,
&quot;MidWest&quot;, &quot;Mid Central&quot;,
&quot;New England&quot;, &quot;East Coast&quot;,
&quot;New York&quot;, &quot;East Coast&quot;,
&quot;Northern California&quot;, &quot;West Coast&quot;,
&quot;North Texas&quot;, &quot;Mountain&quot;,
&quot;Northwest&quot;, &quot;West Coast&quot;,
&quot;Rocky Mountains&quot;, &quot;Mountain&quot;,
&quot;Southern&quot;, &quot;Mid Central&quot;,
&quot;Southeast&quot; , &quot;East Coast&quot;,
&quot;Southern California&quot; , &quot;West Coast&quot;,
&quot;Southwest&quot; , &quot;West Coast&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA Regen Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Regional_Marketing_Coordinator__c</fullName>
        <label>NA: Regional Marketing Coordinator</label>
        <relationshipName>User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>NA_Simplant_DM_Role__c</fullName>
        <formula>NA_Simplant_DM__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA Simplant DM Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Simplant_DM__c</fullName>
        <label>NA Simplant DM</label>
        <relationshipName>NA_Simplant_DM</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>NA_University_Area__c</fullName>
        <formula>IF(
 CONTAINS( TEXT(Region__c) , &quot; D01&quot;), &quot;D01 Northeast&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot; D02&quot;), &quot;D02 Mid Atlantic&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot; D03&quot;), &quot;D03 Mid South&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot; D04&quot;), &quot;D04 Southeast&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot; D05&quot;), &quot;D05 Great Lakes&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot; D06&quot;), &quot;D06 North Central&quot;,


IF(
 CONTAINS( TEXT(Region__c) , &quot; D07&quot;), &quot;D07 South Central&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot; D08&quot;), &quot;D08 Northwest&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot; D09&quot;), &quot;D09 Southwest&quot;,
IF(
 CONTAINS( TEXT(Region__c) , &quot;US: P&quot;), &quot;Procedural Solutions&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot;US: Na&quot;), &quot;National Accts and Institutional&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot;US: Te&quot;), &quot;Technology and Imaging&quot;,

IF(
 CONTAINS( TEXT(Region__c) , &quot;Distribution&quot;), &quot;Distribution&quot;,
 &quot;Other&quot;

)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA: Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Admin__c</fullName>
        <description>Users with information in this field will receive information adressed to National Admins</description>
        <inlineHelpText>Used to define the &quot;true&quot; National Administrators. Users with information in this field will receive information adressed to National Admins.</inlineHelpText>
        <label>Is National Admin?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                    <default>true</default>
                    <label>Dental</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orthodontics_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use User&apos;s SBUs</description>
        <label>TBD Orthodontics User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PEERS_Responsible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PEERS Responsible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Order_Account__c</fullName>
        <inlineHelpText>Please add the user&apos;s personal SFDC account ID for handling Free of Charge orders</inlineHelpText>
        <label>Personal Order Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preventive_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TBD Preventive User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Area_Code__c</fullName>
        <description>This field shows a numeric representation of Product Area (1=Dental, 2=Surgery,3=Urology, 4=Healthcare, 5=All). Used in reports</description>
        <formula>CASE( Product_Area__c , 
&quot;Dental&quot;, 1, 
&quot;Surgery&quot;, 2,
&quot;Urology&quot;, 3, 
&quot;Healthcare&quot;, 4,
&quot;All&quot;,5,
null)</formula>
        <inlineHelpText>This field shows a numeric representation of Product Area (1=Dental, 2=Surgery,3=Urology, 4=Healthcare, 5=All). Used in reports</inlineHelpText>
        <label>Product Area Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                    <default>true</default>
                    <label>Dental</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>